feat: 상세 할인정보를 반환하는 기능 구현